# Flask

./: .dockerignore  docker-compose.yaml  pyproject.toml  requirements.txt  wsgi.py
blog/: app.py  commands.py  config.py  db.sqlite  extensions.py  models.py
blog/admin/: views.py
blog/api/: article.py  author.py
blog/api/permissions/: user.py
blog/article/: views.py
blog/auth/: views.py
blog/author/: views.py
blog/forms/: article.py  user.py
blog/schemas/: user.py
blog/tag/: views.py
blog/templates/: base.html  navbar.html
blog/templates/articles/: create.html  details.html  list.html
blog/templates/auth/: login.html
blog/templates/authors/: list.html
blog/templates/tags/: list.html  profile.html
blog/templates/users/: details.html  list.html  profile.html  register.html
blog/user/: views.py
migrations/versions/: 0917c63d0cab_create_user_model.py  0de27fbe04dd_.py  4e1d5b592555_.py  5227fd9597f4_.py  56683a24e65d_.py  aae9f6f0e840_.py  c8a3247e5f1f_create_user_model.py
