[tool.poetry]
name = "blog_flask"
version = "0.1.0"
description = ""
authors = ["Donvik1976 <vdonets76@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.3"
pip = "^23.0.1"
itsdangerous = "^2.1.2"
setuptools = "^67.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
